# studious

./: .gitignore  README.md  README.org  etreetest.py  pyproject.toml  studious.py
qttestcode/: mainwin.ui
src/: __main__.py
src/studious/: base32c.py  studious.py
studious/: __main__.py  studious.py
